# FastAPI3

./: db.py  main.py  pyproject.toml
models/: classes.py
